--- a/AboutEG/AboutEG/Content/Site.css
+++ b/AboutEG/AboutEG/Content/Site.css
@@ -22,3 +22,69 @@ select,
 textarea {
     max-width: 280px;
 }
+
+/*************************I'm starting here*/
+.logo{
+    color:white;
+    background-color:sandybrown;
+    padding: 1em;
+}
+
+#principal{
+    border-color:aqua;
+    border: 1px;
+}
+
+.navbar-inverse {
+    background-color: indianred;
+    border-color: #ddd;
+    color: #333;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+        color: #333;
+}
+
+.panel-default > .panel-heading {
+    color: #333;
+    background-color: indianred;
+    border-color: #ddd;
+}
+
+footer {
+    width: 100%;
+    background-color: #333;
+    border-color: #ddd;
+    color:#ddd;
+    text-align:center;
+    position:fixed;
+    bottom:0;
+}
+*#gotop {
+    position: relative;
+    z-index: 9999;
+}
+
+#gotop .gotop_active .scrollup {
+    opacity: .25;
+}
+
+#gotop .scrollup {
+    width: 40px;
+    height: 40px;
+    text-indent: -9999px;
+    opacity: 0;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    background: url(../Images/css/icon_top.png) no-repeat;
+    -webkit-transition: all .2s ease-out;
+    -moz-transition: all .2s ease-out;
+    -o-transition: all .2s ease-out;
+    transition: all .2s ease-out;
+}
+
+#gotop > a {
+    color: #0088cc;
+    text-decoration: none;
+}
