--- a/AboutEG/AboutEG/Views/Home/Index.cshtml
+++ b/AboutEG/AboutEG/Views/Home/Index.cshtml
@@ -1,31 +1,81 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+<div id="principal" class="row">
+    <div class="col-md-3">
+        <aside class="panel panel-default">
+            <div class="panel-heading">DESTACADAS</div>
+            <div class="panel-body">
+                <p>Recibe por aquí las noticias más destacadas </p>
+            </div>
+            <ul class="list-group">
+                <li class="list-group-item"><a href="#">Free Domain Name Registration</a></li>
+                <li class="list-group-item"><a href="#">Free Domain Name Registration</a></li>
+                <li class="list-group-item"><a href="#">Free Domain Name Registration</a></li>
+                <li class="list-group-item"><a href="#">Free Domain Name Registration</a></li>
+                <li class="list-group-item"><a href="#">Free Domain Name Registration</a></li>
+            </ul>
+        </aside>
+        <aside class="panel panel-default">
+            <div class="panel-heading">CATEGORÍAS</div>
+            <div class="panel-body">
+                <p>Clasificación por categorías</p>
+            </div>
+            <ul class="list-group">
+                <li class="list-group-item"><a href="#">Free Domain Name Registration</a></li>
+                <li class="list-group-item"><a href="#">Free Domain Name Registration</a></li>
+                <li class="list-group-item"><a href="#">Free Domain Name Registration</a></li>
+                <li class="list-group-item"><a href="#">Free Domain Name Registration</a></li>
+                <li class="list-group-item"><a href="#">Free Domain Name Registration</a></li>
+            </ul>
+        </aside>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+    <div class="col-md-6">
+        <div class="jumbotron">
+            <h1>Último artículo</h1>
+            <p class="lead">Este es el último artículo publicado en el portal</p>
+            <p><a href="https://asp.net" class="btn btn-primary btn-lg">Leer más en &raquo;</a></p>
+        </div>
+        <div class="jumbotron">
+            <h1>Último artículo</h1>
+            <p class="lead">Este es el último artículo publicado en el portal</p>
+            <p><a href="https://asp.net" class="btn btn-primary btn-lg">Leer más en &raquo;</a></p>
+        </div>
+        <div class="jumbotron">
+            <h1>Último artículo</h1>
+            <p class="lead">Este es el último artículo publicado en el portal</p>
+            <p><a href="https://asp.net" class="btn btn-primary btn-lg">Leer más en &raquo;</a></p>
+        </div>
+
+        
+        
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="col-md-3">
+        <aside class="panel panel-default">
+            <div class="panel-heading">NOVEDADES</div>
+            <div class="panel-body">
+                <p>Recibe por aquí las últimas novedades </p>
+            </div>
+            <ul class="list-group">
+                <li class="list-group-item"><a href="#">Free Domain Name Registration</a></li>
+                <li class="list-group-item"><a href="#">Free Domain Name Registration</a></li>
+                <li class="list-group-item"><a href="#">Free Domain Name Registration</a></li>
+                <li class="list-group-item"><a href="#">Free Domain Name Registration</a></li>
+                <li class="list-group-item"><a href="#">Free Domain Name Registration</a></li>
+            </ul>
+        </aside>
+        <aside class="panel panel-default">
+            <div class="panel-heading">ARCHIVO</div>
+            <div class="panel-body">
+                <p>Recibe por aquí la clasificación de archivo </p>
+            </div>
+            <ul class="list-group">
+                <li class="list-group-item"><a href="#">Free Domain Name Registration</a></li>
+                <li class="list-group-item"><a href="#">Free Domain Name Registration</a></li>
+                <li class="list-group-item"><a href="#">Free Domain Name Registration</a></li>
+                <li class="list-group-item"><a href="#">Free Domain Name Registration</a></li>
+                <li class="list-group-item"><a href="#">Free Domain Name Registration</a></li>
+            </ul>
+        </aside>
     </div>
 </div>
