--- a/AboutEG/AboutEG/Views/_ViewStart.cshtml
+++ b/AboutEG/AboutEG/Views/_ViewStart.cshtml
@@ -1,3 +1,34 @@
 ﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+
+    Layout = "~/Views/Shared/_EditorLayout.cshtml";
+    // GetRolesAsync
+    /*    bool isAuth = System.Web.HttpContext.Current.User.Identity.IsAuthenticated;
+        if (isAuth)
+        {
+            //Admin
+            if (System.Web.HttpContext.Current.User.IsInRole("Admin"))
+            {
+                Layout = "~/Views/Shared/_Layout.cshtml";
+
+            }
+            //Editor
+            else if (System.Web.HttpContext.Current.User.IsInRole("Editor"))
+            {
+                Layout = "~/Views/Shared/_EditorLayout.cshtml";
+
+            }
+            //Guiest logged
+            else if (System.Web.HttpContext.Current.User.IsInRole("Guest"))
+            {
+                Layout = "~/Views/Shared/_GuestLayout.cshtml";
+            }
+        }
+        //Not logged
+        else
+        {
+            Layout = "~/Views/Shared/_GuestLayout.cshtml";
+
+        }
+        */
+
 }
